#pragma once
#include "ModelManager.h"
#include "CommandParser.h"

class Presenter {
 private:
  
 public:
  Presenter();
  ~Presenter();
  void play();

 private:
};
